--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Todo App</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <div class="container">
@@ -15,7 +17,7 @@
         </div>
         <div class="todo-table">
             <h1>Todo's</h1>
-            <small>12 Total, 12 Complete and 32 Pending</small>
+            <small>4 Total, 1 Complete and 3 Pending</small>
             <table>
                 <thead>
                     <tr>
