Custom Modal Dialogs

--- a/index.html
+++ b/index.html
@@ -51,6 +51,18 @@
             </table>
         </div>
     </div>
+    <div class="confirm-modal hide-modal">
+        <div class="modal-container">
+            <h4>
+                <img src="./images/delete.svg" alt="">
+                <span>Are you sure to delete this entry?</span>
+            </h4>
+            <div class="btns">
+                <button class="delete-btn" data-id="">Yes! Delete It</button>
+                <button class="cancel-btn">Cancel</button>
+            </div>
+        </div>
+    </div>
     <script src="./js/main.js"></script>
 </body>
 </html>
